# ChessPgnReviserWxWidgets

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: main.cpp
src/chess_board/: chessboard.h
src/gui/: chessboard.cpp  chessboard.h  main_window.cpp  main_window.h
src/gui/chess_board/: IPosition.h  ThcPosition.cpp  ThcPosition.h  chessboard.cpp  chessboard.h  pieces_resources.c  promotiondialog.cpp  promotiondialog.h
src/libs/thc-chess-library/: ChessPosition.cpp  ChessRules.cpp
